[gd_scene load_steps=14 format=2]

[ext_resource path="res://game/game_interface.gd" type="Script" id=1]
[ext_resource path="res://actors/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/ScreenFadeout.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/DialogBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/interface/health_bar/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/interface/saving_indicator/SavingIndicator.tscn" type="PackedScene" id=7]
[ext_resource path="res://shared/environments/glow_env.tres" type="Environment" id=8]
[ext_resource path="res://shared/effects/screen_space_effects/vignette/Vignette.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/interface/health_pack_bar/HealthPackBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://shared/effects/screen_space_effects/player_death_transition/PlayerDeathTransition.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/ConfirmationDialog.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/interface/tutorial_messages/TutorialMessage.tscn" type="PackedScene" id=13]

[node name="GameInterface" type="Node"]
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = ExtResource( 8 )

[node name="Rooms" type="Node2D" parent="World"]

[node name="TemporaryNodes" type="Node2D" parent="World" groups=[
"temporary_nodes_node",
]]

[node name="Player" parent="World" instance=ExtResource( 2 )]
position = Vector2( 50, 144 )

[node name="Layers" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLayer" type="CanvasLayer" parent="Layers"]
layer = 4

[node name="Pause" parent="Layers/PauseLayer" instance=ExtResource( 3 )]

[node name="SavingIndicator" parent="Layers/PauseLayer" instance=ExtResource( 7 )]
pause_mode = 2
margin_left = -40.0
margin_top = -28.0
margin_right = -24.0
margin_bottom = -12.0

[node name="ScreenFadeoutLayer" type="CanvasLayer" parent="Layers"]
layer = 3

[node name="ScreenFadeout" parent="Layers/ScreenFadeoutLayer" instance=ExtResource( 4 )]

[node name="DialogBoxLayer" type="CanvasLayer" parent="Layers"]
layer = 2

[node name="DialogBox" parent="Layers/DialogBoxLayer" instance=ExtResource( 5 )]

[node name="ConfirmationDialog" parent="Layers/DialogBoxLayer" instance=ExtResource( 12 )]

[node name="UILayer" type="CanvasLayer" parent="Layers"]

[node name="HealthBar" parent="Layers/UILayer" instance=ExtResource( 6 )]

[node name="HealthPackBar" parent="Layers/UILayer" instance=ExtResource( 10 )]

[node name="TutorialMessage" parent="Layers/UILayer" instance=ExtResource( 13 )]

[node name="ScreenSpaceEffectsLayer" type="CanvasLayer" parent="Layers"]
layer = 0

[node name="Vignette" parent="Layers/ScreenSpaceEffectsLayer" instance=ExtResource( 9 )]

[node name="PlayerDeathTransition" parent="Layers/ScreenSpaceEffectsLayer" instance=ExtResource( 11 )]
